--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "The name of your app",
-  "description": "the descriptio",
+  "description": "the description wesh",
   "repository": "https://github.com/HenriChabrand/testHeroku/",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static"]
