--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "The name of your app",
+  "name": "The name ohhhhf your app",
   "description": "the description wesh",
   "repository": "https://github.com/HenriChabrand/testHeroku/",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
