--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.13.3",
-    "apiai": "2.0.5"
+    "apiai": "2.0.5",
+    "body-parser": "1.15.2"
  
   },
   "engines": {
